crates/ssa-workflow-derive/tests/ui/union.stderr
error: CanonicalEncode can only be derived for structs or unit enums
 --> tests/ui/union.rs:4:1
  |
4 | union BadUnion {
  | ^^^^^
